# genie-ai

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test.py
.claude/: settings.json
.claude/hooks/: log_changes.sh
alembic/: env.py
alembic/versions/: 0001_create_agent_runs.py
data/: agent_run_result_schema.json  scenario3_research_report_schema.json
data/research_pack/sources/: source_A_vendor_brief_acmedoc_ai.html  source_B_vendor_brief_papermind_ai.html  source_C_pricing_features.csv  source_D_internal_stakeholder_notes.txt  source_F_vendor_brief_datastream_ai.html  source_G_pricing_features_updated.csv  source_H_internal_feedback_addendum.txt
docs/: IDEAS.md  TODO.md  report.md
reports/: README.md  phase1_rag_langgraph.md
scripts/: ingest.py  start.sh
src/: config.py  graph.py  prompts.py
src/agents/: classifier.py  comparator.py  gatherer.py  persist.py  planner.py  scorer.py  writer.py
src/api/: main.py  utils.py
src/api/routes/: hackernews.py  research.py  runs.py  stream.py
src/db/: session.py
src/rag/: client.py  embeddings.py  loaders.py  retriever.py
src/schemas/: llm.py  report.py  run.py
src/tools/: hackernews.py
src/ui/: app.py
working/: runs.jsonl
